bookmark elongation on iphone fixed

--- a/css/style.css
+++ b/css/style.css
@@ -234,7 +234,6 @@ html,body {
 }
 
 #table{
-  min-height: calc(100vh - 50px);
   background: #ebd9c6;
   display: flex;
   flex-direction: column;
@@ -284,9 +283,10 @@ html,body {
 
 #bookmark {
   width: 2%;
-  height: calc(100vh - 80px);
+  min-height: 110%;
   margin: auto;
-  margin-bottom: -20px;
+  top:0;
+  margin-bottom: -5%;
   background-color: #37729b;
   border-radius: 0 0 5px 5px;
 }
